@@ -2288,6 +2288,272 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testEnsureCapacity
+specifier|public
+name|void
+name|testEnsureCapacity
+parameter_list|()
+block|{
+name|OpenBitSet
+name|bits
+init|=
+operator|new
+name|OpenBitSet
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|int
+name|bit
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|100
+argument_list|)
+operator|+
+literal|10
+decl_stmt|;
+name|bits
+operator|.
+name|ensureCapacity
+argument_list|(
+name|bit
+argument_list|)
+expr_stmt|;
+comment|// make room for more bits
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+name|bit
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|ensureCapacity
+argument_list|(
+name|bit
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+name|bit
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+operator|+
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|ensureCapacity
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+comment|// should not change numBits nor grow the array
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+name|bit
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+operator|-
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test ensureCapacityWords
+name|int
+name|numWords
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|10
+argument_list|)
+operator|+
+literal|2
+decl_stmt|;
+comment|// make sure we grow the array (at least 128 bits)
+name|bits
+operator|.
+name|ensureCapacityWords
+argument_list|(
+name|numWords
+argument_list|)
+expr_stmt|;
+name|bit
+operator|=
+name|_TestUtil
+operator|.
+name|nextInt
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+literal|128
+argument_list|,
+name|numWords
+operator|<<
+literal|6
+argument_list|)
+expr_stmt|;
+comment|// pick a higher bit than 128, but still within range
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+name|bit
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|fastClear
+argument_list|(
+name|bit
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|fastFlip
+argument_list|(
+name|bit
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|ensureCapacityWords
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+comment|// should not change numBits nor grow the array
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|bits
+operator|.
+name|fastSet
+argument_list|(
+name|bit
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|bits
+operator|.
+name|fastGet
+argument_list|(
+name|bit
+operator|-
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
